MDEV-7715 - Spiral patch 017_mariadb-10.0.15.get_error_at_commit.diff

Let open_ltable() rollback statement only if it failed to lock transactional
table. This allows spider to safely open non-transactional system tables during
commit.